# ppt-maker

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  webui.py
src/: __init__.py  data_converter.py  outline_generator.py  ppt_generator.py  utils.py
src/image_sources/: __init__.py  flux.py  openai_image.py  pexels.py  sdxl_turbo.py  unsplash.py
src/logger/: __init__.py  main.py
src/themes/: blue-line.pptx  purple-modern.pptx  simple.pptx
test/: generate_outline_demo.py  generate_ppt_demo.py  markdown_to_root_demo.py
